# hypervisor

./: .travis.yml  CMakeLists.txt  README.md
bfdriver/: CMakeLists.txt
bfdriver/src/: common.c
bfdriver/src/platform/linux/: platform.c  vmcall_aarch64.s
bfdriver/tests/: CMakeLists.txt
bfdummy/src/main/: CMakeLists.txt  dummy_main.cpp
bfelf_loader/: CMakeLists.txt
bfelf_loader/include/: bfelf_loader_reloc_aarch64.h
bfelf_loader/tests/: CMakeLists.txt
bfintrinsics/include/: intrinsics.h
bfintrinsics/src/: CMakeLists.txt
bfm/: CMakeLists.txt
bfm/ioctl/: CMakeLists.txt
bfm/main/: CMakeLists.txt
bfm/src/arch/aarch64/: bfvmcall.s
bfm/tests/: CMakeLists.txt
bfruntime/src/crt/: CMakeLists.txt
bfruntime/src/pthread/: CMakeLists.txt  (+1 more)
bfsdk/: CMakeLists.txt
bfsdk/cmake/: CMakeGlobal_Project.txt
bfsdk/include/: bfconstants.h  bfdebug.h  bfgsl.h  bfsupport.h  bftypes.h  vmm.h
bfsdk/tests/: CMakeLists.txt
bfsysroot/: CMakeLists.txt
bfsysroot/bfsupport/: CMakeLists.txt
bfsysroot/bfsupport/crt/: CMakeLists.txt
bfsysroot/bfsupport/crt/src/: CMakeLists.txt
bfsysroot/bfsupport/crt/tests/: CMakeLists.txt
bfsysroot/bfsupport/dummy_lib1/: CMakeLists.txt
bfsysroot/bfsupport/dummy_lib2/: CMakeLists.txt
bfsysroot/bfsupport/dummy_main/: CMakeLists.txt
bfsysroot/bfsupport/pthread/: CMakeLists.txt
bfsysroot/bfsupport/syscall/: CMakeLists.txt
bfsysroot/bfsupport/tests/: CMakeLists.txt
bfsysroot/bfunwind/: CMakeLists.txt
bfsysroot/bfunwind/src/: CMakeLists.txt
bfsysroot/bfunwind/src/arch/aarch64/: .registers_aarch64.s.swp
bfunwind/include/: dwarf4.h  eh_frame.h  registers.h
bfunwind/src/: CMakeLists.txt
bfvmm/: CMakeLists.txt
bfvmm/include/: bfvmm.h  hypervisor.h  vmm.h  vmm_types.h
bfvmm/include/debug/serial/: serial_ns16550a.h  serial_pl011.h
bfvmm/include/domain/: domain.h  domain_factory.h  domain_manager.h
bfvmm/include/entry/: entry.h
bfvmm/include/hve/arch/intel_x64/: domain.h  ept.h  exit_handler.h  interrupt_queue.h  microcode.h  mtrrs.h  save_state.h  vcpu.h  vcpu_global_state.h  vmcs.h  vmx.h  vpid.h
bfvmm/include/hve/arch/intel_x64/delegator/: cpuid.h  cr.h  fallback.h  invd.h  msr.h  nmi.h  unhandled_exit.h
bfvmm/include/hve/arch/intel_x64/ept/: mmap.h
bfvmm/include/hve/arch/intel_x64/vmexit/: control_register.h  cpuid.h  ept_misconfiguration.h  ept_violation.h  external_interrupt.h  init_signal.h  interrupt_window.h  io_instruction.h  monitor_trap.h  preemption_timer.h  rdmsr.h  sipi_signal.h  wrmsr.h  xsetbv.h
bfvmm/include/hve/arch/x64/: unmapper.h
bfvmm/include/sdk/: cpuid.h
bfvmm/include/sdk/arch/intel_x64/: cpuid.h
bfvmm/include/test/: hve.h
bfvmm/include/vcpu/: vcpu.h
bfvmm/integration/arch/intel_x64/: README  test_all.cpp  test_all.sh
bfvmm/integration/arch/intel_x64/efi/: test_efi.cpp  test_efi_with_interrupts.cpp
bfvmm/integration/arch/intel_x64/ept/: enable_ept.cpp  remap_page.cpp
bfvmm/integration/arch/intel_x64/vmexit/control_register/: trap_cr0.cpp  trap_cr3.cpp  trap_cr4.cpp
bfvmm/integration/arch/intel_x64/vmexit/cpuid/: trap_cpuid.cpp
bfvmm/integration/arch/intel_x64/vmexit/ept_misconfiguration/: trap_ept_misconfiguration.cpp
bfvmm/integration/arch/intel_x64/vmexit/ept_violation/: trap_ept_execute_violation.cpp  trap_ept_read_violation.cpp  trap_ept_write_violation.cpp
bfvmm/integration/arch/intel_x64/vmexit/external_interrupt/: trap_all_interrupts.cpp
bfvmm/integration/arch/intel_x64/vmexit/io_instruction/: trap_in_out.cpp
bfvmm/integration/arch/intel_x64/vmexit/monitor_trap/: single_step_cpuid.cpp
bfvmm/integration/arch/intel_x64/vmexit/rdmsr/: trap_rdmsr.cpp
bfvmm/integration/arch/intel_x64/vmexit/vmx_preemption_timer/: world_switch_latency.cpp
bfvmm/integration/arch/intel_x64/vmexit/wrmsr/: trap_wrmsr.cpp
bfvmm/integration/arch/intel_x64/vpid/: enable_vpid.cpp
bfvmm/src/: CMakeLists.txt
bfvmm/src/debug/: CMakeLists.txt
bfvmm/src/debug/arch/aarch64/: serial_ns16550a.cpp
bfvmm/src/debug/serial/: serial_ns16550a.cpp  serial_pl011.cpp
bfvmm/src/debug_ring/src/: CMakeLists.txt
bfvmm/src/debug_ring/tests/: CMakeLists.txt
bfvmm/src/domain/: CMakeLists.txt  domain.cpp
bfvmm/src/entry/: entry.cpp
bfvmm/src/exit_handler/src/: CMakeLists.txt
bfvmm/src/exit_handler/tests/: CMakeLists.txt
bfvmm/src/hve/: CMakeLists.txt
bfvmm/src/hve/arch/intel_x64/: exit_handler.cpp  vcpu.cpp  vmcs.cpp  vmexit_entry.asm  vmx.cpp
bfvmm/src/hve/arch/intel_x64/delegator/: cpuid.cpp  unhandled_exit.cpp
bfvmm/src/hve/arch/intel_x64/vmexit/: control_register.cpp  cpuid.cpp
bfvmm/src/intrinsics/src/: CMakeLists.txt
bfvmm/src/intrinsics/tests/: CMakeLists.txt
bfvmm/src/main/: CMakeLists.txt
bfvmm/src/main/arch/aarch64/: vcpu_factory.cpp
bfvmm/src/memory_manager/: CMakeLists.txt
bfvmm/src/memory_manager/arch/aarch64/: dummy.cpp
bfvmm/src/memory_manager/src/: CMakeLists.txt
bfvmm/src/memory_manager/tests/: CMakeLists.txt
bfvmm/src/sdk/: CMakeLists.txt
bfvmm/src/sdk/arch/intel_x64/: cpuid.cpp
bfvmm/src/serial/src/: CMakeLists.txt
bfvmm/src/serial/tests/: CMakeLists.txt
bfvmm/src/support/: CMakeLists.txt
bfvmm/src/vcpu/src/: CMakeLists.txt
bfvmm/src/vcpu/tests/: CMakeLists.txt
bfvmm/src/vcpu_factory/src/: CMakeLists.txt
bfvmm/src/vcpu_factory/tests/: CMakeLists.txt
bfvmm/src/vcpu_manager/src/: CMakeLists.txt
bfvmm/src/vcpu_manager/tests/: CMakeLists.txt
bfvmm/src/vmcs/src/: CMakeLists.txt
bfvmm/src/vmcs/tests/: CMakeLists.txt
bfvmm/src/vmxon/src/: CMakeLists.txt
bfvmm/src/vmxon/tests/: CMakeLists.txt
bfvmm/test/: CMakeLists.txt
bfvmm/tests/hve/: CMakeLists.txt
bfvmm/tests/hve/arch/intel_x64/: test_vmcs.cpp
example/: CMakeLists.txt
scripts/cmake/: build_rules.cmake  global_vars.cmake  macros.cmake  targets.cmake  validator.cmake  validator_rules.cmake
scripts/util/: compiler_wrapper.sh  driver_build.sh
scripts/vagrant/: provision_ubuntu17_04.sh
vmm/: CMakeLists.txt
vmm/include/: vmm_init.hpp
vmm/src/: junk_to_get_rid_of.cpp  virtual_machine_monitor.hpp  virtual_machine_monitor_instance.hpp
(+153 files in other folders)
